--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "animate.css": "^4.1.1",
+    "sortablejs": "^1.15.2",
     "vite": "^5.1.5"
   },
   "devDependencies": {
